Fix bug [Stendhal website] Firefox with ubuntu player name split 3005671 and enlarge player image a little less to fit on page nicer and look less blurry

--- a/content/scripts/character.css
+++ b/content/scripts/character.css
@@ -1,7 +1,7 @@
 .bordered_image {
 	border: 1px black solid;
-	width: 96px;
-	height: 128px;
+	width: 67px;
+	height: 90px;
 	margin-right: 4px;
 	margin-bottom: 4px;
 }
